# kash

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  justfile  package-lock.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy.yml  migrate.yml
backend/: .dockerignore  .env.example  .env.production  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/core/: accounts.py  auth.py  categories.py  supabase.py
backend/app/routers/: accounts.py  budgets.py  health.py  recurring_transactions.py  savings_accounts.py  spending_goals.py  summary.py  transactions.py  transfers.py  users.py
backend/app/schemas/: accounts.py  budgets.py  categories.py  recurring_transactions.py  savings_accounts.py  spending_goals.py  summary.py  transactions.py  transfers.py
backend/app/services/: recurring.py
backend/tests/: test_accounts.py  test_accounts_api.py  test_auth.py  test_budgets.py  test_e2e_supabase.py  test_health.py  test_recurring.py  test_recurring_transactions.py  test_savings_snapshots.py  test_spending_goals.py  test_summary.py  test_transactions.py  test_transfers_api.py
docs/: conventions.md  supabase.md
docs/conventions/: api.md  commits.md  database.md  frontend.md  testing.md
docs/mockups/: desktop-add-modal.html  desktop-assets.html  (+12 more)
e2e/: .env.example  .gitignore  README.md  package-lock.json  package.json
frontend/: .dockerignore  .env.local.example  .gitignore  Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts
supabase/: config.toml
(+199 files in other folders)
