[project]
name = "backend"
version = "0.1.0"
description = "Kash backend API"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "pydantic>=2",
    "pydantic-settings>=2.13.1",
    "sqlalchemy[asyncio]>=2",
    "supabase>=2.15.0",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
